@@ -1,8 +1,9 @@
 netmaumau (0.21.1) UNRELEASED; urgency=low
 
   * improved AI player
+  * fixed ultimate mode
 
- -- Heiko Schäfer <heiko@rangun.de>  Sat, 13 Jun 2015 15:22:14 +0200
+ -- Heiko Schäfer <heiko@rangun.de>  Tue, 16 Jun 2015 19:55:23 +0200
 
 netmaumau (0.21.0) UNRELEASED; urgency=low
 
